--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "private": true,
   "sideEffects": false,
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "@remix-run/node": "^1.11.0",
     "@remix-run/react": "^1.11.0",
     "@remix-run/vercel": "^1.11.0",
@@ -20,7 +24,9 @@
     "@remix-run/serve": "^1.11.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "esbuild-register": "^3.4.2",
     "eslint": "^8.27.0",
+    "prisma": "^4.9.0",
     "typescript": "^4.8.4"
   },
   "engines": {
