--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^1.11.0",
     "@remix-run/vercel": "^1.11.0",
     "@vercel/node": "^2.6.2",
+    "argon2": "^0.30.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
