--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@vercel/node": "^2.6.2",
     "argon2": "^0.30.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-auth": "^3.4.0",
+    "remix-auth-form": "^1.3.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.11.0",
