--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
-    "remix-auth-form": "^1.3.0"
+    "remix-auth-form": "^1.3.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.11.0",
